###################
Nagios Change Log
###################

1.0b4 - 06/??/2002
------------------
* Address field in host definitions is now optional in template-based
  config format.  Defaults to host name if not specified.
* Changed method of checking for user/group in RPM spec file
* Bug fixes in template-based object code


1.0b3 - 06/09/2002
------------------
* Bug fixes in template-based object code
* Bug fix in tac CGI for counting host and service states properly
* Default is now to check for external commands as often as possible
* Ping syntax for WAP interface moved to CGI config file
* Command file user/group defaults to Nagios user/group unless
  overridden with configure script options
* Sample template-based object config file fixes


1.0b2 - 05/27/2002
------------------
* Updated RPM spec file
* Context-sensitive help option moved to CGI config file
* Fixed bug with escaping strings for DB support (MySQL & PostgreSQL)
* Configure script now reports warning if unable to located
  MySQL or PostgreSQL libs
* Several bug fixes in template-based object code
* Multiple hostgroups supported in host and service escalations
* Wildcard support in service, service escalation, and host
  escalation definitions


1.0b1 - 05/10/2002
------------------

* More verbose listing of object information in configuration CGI
* Added histogram CGI for graphing host/service events
* Added view of service check scheduling queue to extended info CGI
* Added host escalations and host notification dependencies
* Implemented optional template-based object and extended information
  configuration routines
* Added optional service "freshness" checking
* Added grid layout view to status CGI
* Added optional performance data routines to output directly to a file
  instead of running a system command
* CGIs will assume Nagios process is running if no process check
  command is specified
* Expanded host and service definitions to include:
	- Retention data options