@@ -1,10 +1,10 @@
 
-All source code, binaries, documentation, and information contained
-in this distribution are provided AS IS with NO WARRANTY OF ANY KIND,
-INCLUDING THE WARRANTY OF DESIGN, MERCHANTABILITY, AND FITNESS FOR
-A PARTICULAR PURPOSE.
+All source code, binaries, documentation, information, and other files
+contained in this distribution are provided AS IS with NO WARRANTY OF
+ANY KIND, INCLUDING THE WARRANTY OF DESIGN, MERCHANTABILITY, AND FITNESS
+FOR A PARTICULAR PURPOSE.
 
-Nagios and the Nagios logo are trademarks of Ethan Galstad. All 
-other trademarks, servicemarks, registered trademarks, and 
+Nagios and the Nagios logo are registered trademarks of Ethan Galstad.
+All other trademarks, servicemarks, registered trademarks, and 
 registered servicemarks are the property of their respective owner(s).
 
